<resources>
    <string name="app_name">JustDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HomeFragment">Home Fragment</string>
    <string name="CreateFragment">Create Fragment</string>
    <string name="notes_app">Notes App</string>
    <string name="Tag">Its tough to remember everything So Just note it</string>
    <string name="logo_image">Logo Image</string>
    <string name="by_dkay">By Dkay</string>
    <string name="EditFragment">Edit Fragment</string>
    <string name="floatingbutton">Floating Button</string>
    <string name="title">Title...</string>
    <string name="Subtitle">Subtitle...</string>
    <string name="Notes">Notes...</string>
    <string name="just_do">Just Do</string>
    <string name="notesContent">Ready to belong on personel choices and let them to perform some tasks that lets you to elaborate</string>
    <string name="date">28:12:22</string>
    <string name="Tag_delete">Are you sure want to delete\n This Note?</string>
    <string name="high">High</string>
    <string name="Medium">Medium</string>
    <string name="low">Low</string>
</resources>