<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bac"
    android:layout_height="match_parent"
    tools:context=".splashScreen.SplashScreen">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp"
        android:src="@drawable/notes"
        android:contentDescription="@string/logo_image" />
    <TextView
        android:id="@+id/tv_LogoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_app"
        android:textColor="@color/red"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/Logo"/>
    <TextView
        android:id="@+id/tv_Para"
        android:layout_width="340dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/Tag"
        android:layout_marginHorizontal="10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_LogoName"
        android:textColor="@color/red"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_Para"
        app:layout_constraintBottom_toTopOf="@id/copyrightName"
        />

    <TextView
        android:id="@+id/copyrightName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_dkay"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:textColor="@color/red"
        />

</androidx.constraintlayout.widget.ConstraintLayout>