<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#A19F9F"
        app:cardCornerRadius="10dp">


        <View
            android:id="@+id/viewPriority"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:background="@drawable/red_circle"/>

        <LinearLayout
            android:layout_margin="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <TextView
                android:id="@+id/titleOfNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:maxLines="1"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:fontFamily="serif-monospace"
                android:text="@string/just_do"/>

            <TextView
                android:id="@+id/contentOfNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#DDDDDD"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:fontFamily="serif-monospace"
                android:text="@string/notesContent"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/dateOfNotes"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/date"/>
                <ImageView
                    android:id="@+id/btndelete"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_delete"
                    >

                </ImageView>


            </LinearLayout>

            
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>