<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bac"
    tools:context=".Fragment.CreateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarCreateNotes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/red"
            android:textAlignment="textStart"
            app:title="Create Notes"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/toolbarCreateNotes"
            android:paddingEnd="10dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_custom_layout"
                android:padding="10dp"
                android:fontFamily="serif-monospace"
                android:textColorHint="@color/white"
                android:hint="@string/title"/>

            <EditText
                android:id="@+id/editsubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_custom_layout"
                android:padding="10dp"
                android:fontFamily="serif-monospace"
                android:textColorHint="@color/white"
                android:hint="@string/Subtitle"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/pgreen"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/green_circle"
                    />

                <ImageView
                    android:id="@+id/pyellow"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/yellow_circle"
                    />

                <ImageView
                    android:id="@+id/pred"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/red_circle"
                    />

            </LinearLayout>
            <EditText
                android:id="@+id/writenotes"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:background="@drawable/edit_custom_layout"
                android:padding="10dp"
                android:fontFamily="serif-monospace"
                android:textColorHint="@color/white"
                android:hint="@string/Notes"/>


        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSaveNotes"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_done"
            android:backgroundTint="@color/red"
            android:layout_gravity="bottom|end"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>